--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
-.App {
-  text-align: center;
+
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .App-logo {
